# WEB_modul_02_13-1

./: alembic.ini  main.py  pyproject.toml
migration/: env.py
migration/versions/: 01885e4885a6_add_tabel_users.py  2b990491a04c_init.py  6628e80e2530_add_varify.py  b889e98c04f2_add_vatify.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  roles.py
