[tool.poetry]
name = "web-modul-02-11"
version = "0.1.0"
description = ""
authors = ["Daryna Mirzaholi <dmirzagholi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
unicorn = "^2.0.1.post1"
uvicorn = "^0.29.0"
app = "^0.0.1"
myapplication = "^0.1.0"
contact = "^1.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
field = "^0.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
libgravatar = "^1.0.4"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydentic = "^0.0.1.dev3"
pydantic-settings = "^2.2.1"
auth = "^0.5.3"
fastapi-mail = "^1.4.1"
cloudinary = "^1.39.1"
fastapi-limiter = "^0.1.6"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
